Add title and alt for logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
 
       <a href="index.html">
-        <img src="images/logo-dark.svg" alt="" class="logosvg">
+        <img src="images/logo-dark.svg" alt="Logo" title="Logo" class="logosvg">
       </a>
 
       <div><a class="joinheader" href="/second.html">JOIN NOW</a></div>
