Responsive bug(test3) fix

--- a/becomeguest.html
+++ b/becomeguest.html
@@ -23,7 +23,7 @@
 
     </section>
     <section id="formsvg">
-        <div class="container" style="padding:0px">
+        <div class="container">
             <h1>Become a Guest Writer For Monfex</h1>
             <div class="flexj" style="align-items: center;">
                 <div class="forms" style="margin-right: 30px;">
@@ -37,8 +37,9 @@
                         <input type="text" id="live" name="live" value="" placeholder="Enter your town"><br>
 
                         <label for="fnfame">4. Are you interested in one-off tasks or a long-term partnership?</label>
-                        <select id="partnership" name=" partnership">
-                            <option value="" disabled selected style='display:none;'>Select format</option>
+                        <select id="partnership" name=" partnership" ">
+                            <option value="" disabled selected style='display:none' >Select formattt
+                            </option>
                             <option value="au">Australia</option>
                             <option value="ca">Canada</option>
                             <option value="usa">USA</option>
