return accordion to first version with minor responsive improovments, fix responsive bugs

--- a/styleguide.html
+++ b/styleguide.html
@@ -389,7 +389,7 @@
                     
                 </div>
             </div>
-            <div class="flexj">
+            <div class="secondlastpcenter">
                 <p>
                     This Style Guide will assist you in matching the tone and voice we use here at Monfex, and help
                     make
